# DiffusionQuantumDots

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  DQMCConfig.h.in  compile_commands.json  doxygen.conf  main.cpp  readme.md
.github/workflows/: cmake-single-platform.yml  doxygen.yml
docs/: CMakeCCompilerId_8c.html  CMakeCXXCompilerId_8cpp.html  DQMCConfig_8h.html  DQMCConfig_8h__dep__incl.map  DQMCConfig_8h__dep__incl.md5  DQMCConfig_8h_source.html  FileLoader_8cpp.html  FileLoader_8cpp_8o_8d.html  FileLoader_8h.html  FileLoader_8h_source.html  OpenMPCheckVersion_8c.html  OpenMPCheckVersion_8c__incl.map  OpenMPCheckVersion_8c__incl.md5  OpenMPCheckVersion_8cpp.html  OpenMPCheckVersion_8cpp__incl.map  OpenMPCheckVersion_8cpp__incl.md5  OpenMPTryFlag_8c.html  OpenMPTryFlag_8c__incl.map  OpenMPTryFlag_8c__incl.md5  OpenMPTryFlag_8cpp.html  OpenMPTryFlag_8cpp__incl.map  OpenMPTryFlag_8cpp__incl.md5  UnitHandler_8cpp.html  UnitHandler_8cpp_8o_8d.html  UnitHandler_8hpp.html  UnitHandler_8hpp__dep__incl.map  UnitHandler_8hpp__dep__incl.md5  UnitHandler_8hpp_source.html  abstract__manybody__orbital_8cpp.html  abstract__manybody__orbital_8cpp_8o_8d.html  abstract__manybody__orbital_8cpp__incl.map  abstract__manybody__orbital_8cpp__incl.md5  abstract__manybody__orbital_8hpp.html  abstract__manybody__orbital_8hpp__dep__incl.map  abstract__manybody__orbital_8hpp__dep__incl.md5  abstract__manybody__orbital_8hpp__incl.map  abstract__manybody__orbital_8hpp__incl.md5  abstract__manybody__orbital_8hpp_source.html  abstract__orbital_8hpp.html  abstract__orbital_8hpp__dep__incl.map  (+375 more)
docs/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  defines_0.js  defines_1.js  defines_2.js  defines_3.js  defines_4.js  (+66 more)
libs/DiffusionSolver/: CMakeLists.txt
libs/DiffusionSolver/DiffusionParams/include/: harmonic_potential.hpp  params.hpp
libs/DiffusionSolver/DiffusionParams/src/: harmonic_potential.cpp  params.cpp
libs/DiffusionSolver/TrialFunctions/include/: abstract_wf.hpp  static_orbital.hpp
libs/DiffusionSolver/TrialFunctions/src/: harmonic_oscillator.cpp
libs/DiffusionSolver/include/: blocking.hpp  params.hpp  results.hpp  solver.hpp  walkers.hpp  walkers_struct.hpp
libs/DiffusionSolver/src/: blocking.cpp  params.cpp  results.cpp  solver.cpp  walkers.cpp
libs/FileLoader/: CMakeLists.txt
libs/UnitHandler/: CMakeLists.txt
libs/UnitHandler/include/: UnitHandler.hpp
ploters/: 2d_system.jl  blocks.jl  first_excited.jl  many_particles.jl  tester_plot.jl  trial_wavef.jl  walkers.jl
plotters/: 1d_2nd_state.jl  1d_node_search.jl  1d_system.jl  2d_system.jl  blocks.jl  energy.jl  first_excited.jl  second_excited.jl  tester_plot.jl  trial_wavef.jl
src/: main.cpp
src/DiffusionSolver/: CMakeLists.txt
src/DiffusionSolver/Core/include/: blocking.hpp  electrons.hpp  results.hpp  solver.hpp  solver_context.hpp  walkers.hpp  walkers_struct.hpp
src/DiffusionSolver/Core/src/: blocking.cpp  electrons.cpp  results.cpp  solver.cpp  solver_context.cpp  walkers.cpp
src/DiffusionSolver/DiffusionParams/include/: harmonic_potential.hpp  params.hpp
src/DiffusionSolver/DiffusionParams/src/: harmonic_potential.cpp  params.cpp
src/DiffusionSolver/TrialFunctions/include/: abstract_manybody_orbital.hpp  abstract_orbital.hpp  abstract_singlebody_orbital.hpp  abstract_wf.hpp  harmonic_oscillator.hpp  jastrow_slater.hpp  static_orbital.hpp
src/DiffusionSolver/TrialFunctions/src/: abstract_manybody_orbital.cpp  abstract_singlebody_orbital.cpp  harmonic_oscillator.cpp  jastrow_slater.cpp  static_orbital.cpp
src/MinimumSeeker/include/: minimum_seeker.hpp
src/WalkersVisualiser/: CMakeLists.txt
src/WalkersVisualiser/include/: visualiser.hpp
src/WalkersVisualiser/src/: visualiser.cpp
